<resources>
    <string name="app_name">Plexus</string>
    <string name="profile_nav">Profile</string>
    <string name="notifications_nav">Notifications</string>
    <string name="add_nav">Add</string>
    <string name="feed_nav">Feed</string>
    <string name="sign_up">Sign Up</string>
    <string name="header_login">Welcome back to Plexus</string>
    <string name="sub_header_login">Fill out the form to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="welcome_header">Welcome to Plexus</string>
    <string name="welcome_sub_header">Fill out the form to get started</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="select_a_country">Select a country</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic (CAR)</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>North Macedonia (formerly Macedonia)</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates (UAE)</item>
        <item>United Kingdom (UK)</item>
        <item>United States of America (USA)</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City (Holy See)</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="toolbar_header">Profile</string>
    <string name="about">About</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Rather not say</item>
    </string-array>
    <string name="specify_your_gender">Specify your gender</string>
    <string name="birthday">Birthday</string>
    <string name="choose_your_birth_date">Choose your birth date</string>
    <string name="finish">Finish</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_cover">Change cover</string>
    <string name="read_more">Read More</string>
    <string name="you_have_been_banned_for_">"You have been banned for "</string>
    <string name="couldn_t_find_the_users_account_at_this_moment">Couldn\'t find the users account at this moment</string>
    <string name="this_account_is_private">This account is private</string>
    <string name="follow_this_account_to_see_their_photos_and_to_contact_them">Follow this account to see their photos and to contact them</string>
    <string name="your_saved_posts">Your Saved Posts</string>
    <string name="image_header">Image</string>
    <string name="details_header">Details</string>
    <string name="bio">Bio</string>
    <string name="feeling">Feeling</string>
    <string name="website">Website</string>
    <string name="account_header">Account</string>
    <string name="you_can_t_edit_the_info_below">You can\'t edit the info below.</string>
    <string name="plexus_id">Plexus ID</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="data_policy">Data Policy</string>
    <string name="about_toolbar">About</string>
    <string name="version_about">Version:</string>
    <string name="trademarks">Plexus and the Plexus logos are trademark of Plexus Inc. All rights reserved.</string>
    <string name="open_source_description">Plexus for android is built using open source software:</string>
    <string name="licenses">Licenses</string>
    <string name="change_password">Change Password</string>
    <string name="manage_account_toolbar">Manage Account</string>
    <string name="check_your_plexus_account_information_and_manage_it_safely">Check your Plexus Account information and manage it safely.</string>
    <string name="account_information">Account Information</string>
    <string name="manage_plexus_info">Manage Plexus Info</string>
    <string name="protect_your_account">Protect Your Account</string>
    <string name="two_factor_authentication">Two-Factor Authentication</string>
    <string name="login_management">Login Management</string>
    <string name="settings_sub_header">Settings</string>
    <string name="manage_plexus_account_info">Manage Plexus Account Info</string>
    <string name="collected_info_required">Collected Info [Required]</string>
    <string name="username_profile_image_phone_number">Username, profile image, phone number</string>
    <string name="manage_my_personal_info">Manage My Personal Info</string>
    <string name="download_my_plexus_info">Download My Plexus Info</string>
    <string name="unregister_from_plexus">Unregister From Plexus</string>
    <string name="plexus_account">Plexus Account</string>
    <string name="plexus_account_linked_services">Plexus Account / Linked Services</string>
    <string name="plexus_services_description">You can manage your personal information for your Plexus Account and other Plexus services</string>
    <string name="phone_number">Phone Number</string>
    <string name="plexus_pay_add_email">Add Email</string>
    <string name="plexus_pay_phone_number">Add Phone Number</string>
</resources>