<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Plexus, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar"
        app:contentInsetLeft="0dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/manage_account_toolbar"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/user_view"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_height="50dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:roundAsCircle="true"
            android:id="@+id/profile_image"/>

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignTop="@id/profile_image"
            android:layout_toEndOf="@id/profile_image"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fullname"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:layout_toEndOf="@id/profile_image"
                android:maxLines="2"
                android:fontFamily="@font/roboto"
                android:textSize="10sp"
                android:text="@string/check_your_plexus_account_information_and_manage_it_safely"
                android:layout_gravity="start"
                android:textColor="@color/gray_scale"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_below="@id/user_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/guideline"
        android:layout_margin="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/account_information"
        android:textSize="12sp"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:id="@+id/email_change">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textColor="@color/plexus"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:id="@+id/manage_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_plexus_info"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/protect_your_account"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:id="@+id/change_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:id="@+id/two_factor"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_factor_authentication"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:id="@+id/login_management"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_management"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/settings_sub_header"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/terms_of_service"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/terms_of_use"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/data_policy"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>