<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:fontFamily="@font/roboto_bold"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/plexus_pay_contact_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plexus_pay_add_email"
        android:textColor="@color/plexus"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_margin="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/guidelineColor"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/textColor"
        android:fontFamily="@font/roboto_bold"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plexus_pay_phone_number"
        android:textColor="@color/plexus"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        android:layout_margin="15dp"/>

</LinearLayout>