<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Plexus, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar"
        app:contentInsetLeft="0dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/manage_plexus_account_info"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/collected_info_required"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:layout_marginStart="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/required_details">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:text="@string/username_profile_image_phone_number"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:tint="@color/gray_scale"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/manage_my_personal_info"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:layout_marginStart="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/download_account_info">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:text="@string/download_my_plexus_info"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:tint="@color/gray_scale"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/guideline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_account_info">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_margin="15dp"
            android:layout_centerVertical="true"
            android:text="@string/unregister_from_plexus"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:tint="@color/gray_scale"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_scale"
        android:text="@string/plexus_account"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:layout_marginStart="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linked_services">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:id="@+id/email_change">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plexus_account_linked_services"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plexus_services_description"
                android:textSize="12sp"
                android:id="@+id/email"
                android:textColor="@color/gray_scale"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:tint="@color/gray_scale"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</LinearLayout>